syntax = "proto3";
package zidecar.v1;

// Zidecar gRPC service
// Provides Ligerito-proven header chain and compact blocks
service Zidecar {
    // Get header chain proof from height range
    rpc GetHeaderProof(ProofRequest) returns (HeaderProof);

    // Stream compact blocks in range
    rpc GetCompactBlocks(BlockRange) returns (stream CompactBlock);

    // Get current chain tip
    rpc GetTip(Empty) returns (BlockId);

    // Subscribe to new blocks (live feed)
    rpc SubscribeBlocks(Empty) returns (stream BlockId);

    // Get sync status (blockchain height, epoch progress, gigaproof status)
    rpc GetSyncStatus(Empty) returns (SyncStatus);
}

// Request proof for height range
message ProofRequest {
    uint32 from_height = 1;
    uint32 to_height = 2;    // 0 = current tip
}

// Header chain proof with Ligerito
message HeaderProof {
    // Ligerito proof bytes (serialized)
    bytes ligerito_proof = 1;

    // Height range covered
    uint32 from_height = 2;
    uint32 to_height = 3;

    // Chain tip hash
    bytes tip_hash = 4;

    // Block headers for verification
    repeated BlockHeader headers = 5;
}

// Block header metadata
message BlockHeader {
    uint32 height = 1;
    bytes hash = 2;           // 32 bytes
    bytes prev_hash = 3;      // 32 bytes
    uint64 timestamp = 4;
    bytes merkle_root = 5;    // 32 bytes
}

// Block range query
message BlockRange {
    uint32 start_height = 1;
    uint32 end_height = 2;
}

// Compact block (actions only, no tx metadata)
message CompactBlock {
    uint32 height = 1;
    bytes hash = 2;
    repeated CompactAction actions = 3;
}

// Compact Orchard action for trial decryption
message CompactAction {
    bytes cmx = 1;              // note commitment (32 bytes)
    bytes ephemeral_key = 2;    // ephemeral public key (32 bytes)
    bytes ciphertext = 3;       // compact ciphertext (52 bytes)
    bytes nullifier = 4;        // nullifier (32 bytes)
}

// Block identifier
message BlockId {
    uint32 height = 1;
    bytes hash = 2;
}

// Empty message
message Empty {}

// Sync status information
message SyncStatus {
    // Current blockchain height from zcashd
    uint32 current_height = 1;

    // Current epoch number (height / 1024)
    uint32 current_epoch = 2;

    // Blocks in current epoch (0-1023)
    uint32 blocks_in_epoch = 3;

    // Total complete epochs
    uint32 complete_epochs = 4;

    // Gigaproof generation status
    enum GigaproofStatus {
        WAITING_FOR_EPOCH = 0;    // Need more blocks
        GENERATING = 1;            // Currently generating proof
        READY = 2;                 // Gigaproof available
    }
    GigaproofStatus gigaproof_status = 5;

    // Blocks remaining until first gigaproof (0 if ready)
    uint32 blocks_until_ready = 6;

    // Last gigaproof height (0 if none)
    uint32 last_gigaproof_height = 7;
}
